--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@
 ##
 ##  Have docker-compose.yml and .env in the same directory to launch the stack
 
+version: '2'
+
 ######################
 # SERVICES TO LAUNCH #
 ######################
@@ -24,140 +26,91 @@ services:
     # Couchpotato
     # ----------------------------------------
     couchpotato:
-      container_name: couchpotato
-      entrypoint:
-        - /init
-      environment:
-        - PGID=
-        - PUID=
-        - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-        - 'PS1=$(whoami)@$(hostname):$(pwd)$ '
-        - HOME=/root
-        - TERM=xterm
-        - PYTHONIOENCODING=UTF-8
-    image: linuxserver/couchpotato
-    log_driver: json-file
-    ports:
-      - 5050:5050/tcp
-    restart: always
-    volumes:
-      - /dockervols/delugevpn/data/complete:/downloads
-      - /disks/movies:/movies
-      - /etc/localtime:/etc/localtime:ro
-      - /dockervols/couchpotato:/config
-    working_dir: /app/couchpotato
+        image: linuxserver/couchpotato
+        restart: always
+        container_name: couchpotato
+        ports:
+            - '5050:5050'
+        volumes:
+            - '/etc/localtime:/etc/localtime:ro'
+            - '/dockervols/couchpotato:/config'
+            - '/dockervols/delugevpn/data/complete:/downloads'
+            - '/disks/movies:/movies'
+        environment:
+            - PGID=
+            - PUID=
     
     # ----------------------------------------
     # DELUGEVPN
     # ----------------------------------------
-    delugevpn:
-    cap_add:
-      - NET_ADMIN
-    command:
-      - '/bin/bash /root/init.sh'
-    container_name: delugevpn
-    environment:
-      - VPN_ENABLED=yes
-      - VPN_USER=
-      - VPN_PASS=
-      - VPN_REMOTE=us-east.privateinternetaccess.com
-      - VPN_PORT=
-      - VPN_PROTOCOL=udp
-      - VPN_PROV=pia
-      - ENABLE_PRIVOXY=yes
-      - LAN_NETWORK=
-      - DEBUG=false
-      - PUID=
-      - PGID=
-      - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-      - HOME=/home/nobody
-      - TERM=xterm
-      - LANG=en_GB.UTF-8
-    image: binhex/arch-delugevpn
-    log_driver: json-file
-    ports:
-      - 8112:8112/tcp
-      - 8118:8118/tcp
-      - 58846:58846/tcp
-    restart: always
-    volumes:
-      - /dockervols/delugevpn/data:/data
-      - /dockervols/delugevpn/config:/config
-      - /etc/localtime:/etc/localtime:ro
+    arch-delugevpn:
+        image: binhex/arch-delugevpn
+        ports:
+            - '8112:8112'
+            - '8118:8118'
+            - '58846:58846'
+        container_name: delugevpn
+        restart: always
+        volumes:
+            - '/dockervols/delugevpn/data:/data'
+            - '/dockervols/delugevpn/config:/config'
+            - '/etc/localtime:/etc/localtime:ro'
+        environment:
+            - VPN_ENABLED=yes
+            - VPN_USER=
+            - VPN_PASS=
+            - VPN_REMOTE=us-east.privateinternetaccess.com
+            - VPN_PORT=1194
+            - VPN_PROTOCOL=udp
+            - VPN_PROV=pia
+            - ENABLE_PRIVOXY=yes
+            - LAN_NETWORK=192.168.10.0/24
+            - DEBUG=false
+            - PUID=
+            - PGID=
       
     # ----------------------------------------
     # PLEX
     # ----------------------------------------
     plex:
-    command:
-      - /sbin/my_init
-    container_name: plex
-    environment:
-      - VERSION=latest
-      - PUID=
-      - PGID=
-      - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-      - DEBIAN_FRONTEND=noninteractive
-      - HOME=/root
-      - TERM=xterm
-    expose:
-      - 32400/udp
-      - 32400/tcp
-      - 1900/udp
-      - 32469/udp
-      - 32469/tcp
-      - 5353/udp
-    image: linuxserver/plex
-    log_driver: json-file
-    net: host
-    restart: always
-    volumes:
-      - /disks/tv:/data/tvshows
-      - /disks/movies:/data/movies
-      - /dockervols/plex:/config
+        image: linuxserver/plex
+        restart: always
+        container_name: plex
+        environment:
+            - VERSION=latest
+            - PUID=1000
+            - PGID=1000
+        volumes:
+            - '/dockervols/plex:/config'
+            - '/disks/tv:/data/tvshows'
+            - '/disks/movies:/data/movies'
       
     # ----------------------------------------
     # PORTAINER
     # ----------------------------------------
     portainer:
-    container_name: portainer
-    entrypoint:
-        - /portainer
-    environment:
-        - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-    image: portainer/portainer
-    log_driver: json-file
-    ports:
-        - 9000:9000/tcp
-    restart: always
-    volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-    working_dir: /
+        image: portainer/portainer
+        ports:
+            - '9000:9000'
+        container_name: portainer
+        restart: always
+        volumes:
+            - '/var/run/docker.sock:/var/run/docker.sock'
     
     # ----------------------------------------
     # SICKRAGE
     # ----------------------------------------
     sickrage:
-    command:
-      - /sbin/my_init
-    container_name: sickrage
-    environment:
-      - PGID=
-      - PUID=
-      - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-      - DEBIAN_FRONTEND=noninteractive
-      - HOME=/root
-      - TERM=xterm
-      - 'BASE_APTLIST=libxslt1-dev git-core libffi-dev libffi6 libpython-dev libssl-dev
-        python2.7 python-cherrypy python-lxml python-pip python2.7-dev unrar unzip wget'
-      - PYTHONIOENCODING=UTF-8
-    image: linuxserver/sickrage
-    log_driver: json-file
-    ports:
-      - 8081:8081/tcp
-    restart: always
-    volumes:
-      - /dockervols/delugevpn/data/complete:/downloads
-      - /disks/tv:/tv
-      - /etc/localtime:/etc/localtime:ro
-      - /dockervols/sickrage:/config
+        image: linuxserver/sickrage
+        container_name: sickrage
+        volumes:
+            - '/dockervols/sickrage:/config'
+            - '/dockervols/delugevpn/data/complete:/downloads'
+            - '/disks/tv:/tv'
+            - '/etc/localtime:/etc/localtime:ro'
+        environment:
+            - PGID=1000
+            - PUID=1000
+        restart: always
+        ports:
+            - '8081:8081'
