--- a/.env
+++ b/.env
@@ -3,13 +3,11 @@
 ###  M E D I A B O X   C O N F I G   S E T T I N G S
 ###  ------------------------------------------------
 ###
-###  The variables and vaules configured here are applied during
+###  The vaules configured here are applied during
 ###  $ docker-compose up
-###  This file will be populated by the vaules that are gathered with the mediabox.sh script
-###
+###  This file is populated by the mediabox.sh script
 ###
 ###  -----------------------------------------------
 ###  DOCKER-COMPOSE ENVIRONMENT VARIABLES BEGIN HERE
 ###  -----------------------------------------------
-###
 ###
