--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 ##
-##
 ## -------------------------
 ## |   M E D I A B O X     |
 ## -------------------------
@@ -21,7 +20,7 @@ version: '2'
 services:
 
     # ----------------------------------------
-    # Couchpotato
+    # COUCHPOTATO
     # ----------------------------------------
     couchpotato:
         image: linuxserver/couchpotato
@@ -76,7 +75,7 @@ services:
             - '/etc/localtime:/etc/localtime:ro'
  
     # ----------------------------------------
-    # http
+    # HTTP
     # ----------------------------------------
     uhttpd:
         image: fnichol/uhttpd
@@ -92,7 +91,7 @@ services:
             - './www:/www'
 
     # ----------------------------------------
-    # Minio
+    # MINIO
     # ----------------------------------------
     minio:
         image: minio/minio
@@ -109,7 +108,7 @@ services:
         command: server /export
 
     # ----------------------------------------
-    # Ombi
+    # OMBI
     # ----------------------------------------
     ombi:
         image: rogueosb/ombi
@@ -157,7 +156,7 @@ services:
             - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
-    # plexpy
+    # PLEXPY
     # ----------------------------------------
     plexpy:
         image: linuxserver/plexpy
@@ -193,7 +192,7 @@ services:
         command: ${PORTAINERSTYLE}
     
     # ----------------------------------------
-    # Radarr
+    # RADARR
     # ----------------------------------------
     radarr:
         image: linuxserver/radarr
@@ -207,7 +206,7 @@ services:
             - PGID=${PGID}
         volumes:
             - './radarr:/config'
-            - './content/downloads:/downloads'
+            - './content/complete:/downloads'
             - './content/movies:/movies'
             - '/etc/localtime:/etc/localtime:ro'
     
