Change Watchtower interval

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -255,4 +255,4 @@ services:
         restart: always
         volumes:
             - '/var/run/docker.sock:/var/run/docker.sock'
-        command: portainer --schedule @hourly --cleanup
+        command: portainer --schedule @midnight --cleanup
