Fix typo in .env
vaules --> values

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 ###  M E D I A B O X   C O N F I G   S E T T I N G S
 ###  ------------------------------------------------
 ###
-###  The vaules configured here are applied during
+###  The values configured here are applied during
 ###  $ docker-compose up
 ###  This file is populated by the mediabox.sh script
 ###
