Added Usenet support with NZBGet

--- a/.env
+++ b/.env
@@ -11,3 +11,33 @@
 ###  DOCKER-COMPOSE ENVIRONMENT VARIABLES BEGIN HERE
 ###  -----------------------------------------------
 ###
+LOCALUSER=kspillane
+HOSTNAME=ubuntu-dev
+IP_ADDRESS=192.168.1.74
+PUID=1000
+PGID=1000
+PWD=/home/kspillane/mediabox
+PIAUNAME=kspillane
+PIAPASS=bob
+CIDR_ADDRESS=192.168.1.0/24
+TZ=America/Chicago
+PMSTAG=public
+PMSTOKEN=
+PORTAINERSTYLE=--no-auth
+CPDAEMONUN=daemonu
+CPDAEMONPASS=daemonpass
+LOCALUSER=kspillane
+HOSTNAME=ubuntu-dev
+IP_ADDRESS=192.168.1.74
+PUID=1000
+PGID=1000
+PWD=/home/kspillane/mediabox
+PIAUNAME=gog
+PIAPASS=goo
+CIDR_ADDRESS=192.168.1.0/24
+TZ=America/Chicago
+PMSTAG=public
+PMSTOKEN=
+PORTAINERSTYLE=--no-auth
+CPDAEMONUN=bob
+CPDAEMONPASS=foo
