--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,7 +103,7 @@ services:
         restart: unless-stopped
         network_mode: "bridge"
         ports:
-            - '${IP_ADDRESS}:80:80'
+            - '${IP_ADDRESS}:8008:80'
         environment:
             - PUID=${PUID}
             - PGID=${PGID}
@@ -145,6 +145,23 @@ services:
             - './minio:/root/.minio'
             - '${PWD}:/export'
         command: server /export
+
+    # ----------------------------------------
+    # MUXIMUX
+    # ----------------------------------------
+    muximux:
+        image: linuxserver/muximux
+        container_name: muximux
+        restart: unless-stopped
+        network_mode: "bridge"
+        ports:
+            - '${IP_ADDRESS}:80:80'
+        environment:
+            - PUID=${PUID}
+            - PGID=${PGID}
+        volumes:
+            - './muximux:/config'
+            - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
     # NETDATA
