Map Music directory in Plex

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -248,6 +248,7 @@ services:
             - './plex/transcode:/transcode'
             - '${TVDIR}:/data/tvshows'
             - '${MOVIEDIR}:/data/movies'
+            - '${MUSICDIR}:/data/music'
             - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
