allow hardware acceleration by mapping the DRI device

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -294,6 +294,8 @@ services:
             - PLEX_UID=${PUID}
             - PLEX_GID=${PGID}
         hostname: ${HOSTNAME}
+        devices:
+            - '/dev/dri:/dev/dri'
         volumes:
             - './plex:/config'
             - './plex/transcode:/transcode'
